echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: echo, labels: {app: echo}}
spec:
  replicas: 1
  selector: {matchLabels: {app: echo}}
  template:
    metadata: {labels: {app: echo}}
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args: ["-text=hello"]
        ports: [{containerPort: 5678}]
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  selector: {app: echo}
  ports:
  - name: http
    port: 80
    targetPort: 5678
