svc-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-coach-ui
  namespace: default
  labels:
    app: budget-coach-ui
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "budget-coach-ui-bc"}'
spec:
  selector:
    app: budget-coach-ui
  ports:
    - name: http
      port: 80
      targetPort: 8501
  type: ClusterIP
