pfa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfa-ingress
  namespace: default
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: budget-coach-ui
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: insight-agent
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: budget-coach-ui
            port:
              number: 80
